@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*vislcg3-0.9.9.10800 (30 Jun 2015)
+
+  30 Jun 2015; Flammie Pirinen <flammie@gentoo.org> +vislcg3-0.9.9.10800.ebuild,
+  -vislcg3-0.9.8.10063.ebuild:
+  version bump release tarball, name changes
+
 *vislcg3-0.9.9.10730 (28 May 2015)
 
   28 May 2015; Flammie Pirinen <flammie@gentoo.org> +vislcg3-0.9.9.10730.ebuild:
